--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Collection of utilities",
 	"keywords": ["Kappa", "Nette", "utils", "utilities"],
 	"homepage": "https://github.com/Kappa-org/Utils",
-	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
+	"license": ["BSD-3-Clause"],
 	"type": "library",
 	"minimum-stability": "dev",
 	"authors": [
