--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "nette/utils": "~2.2"
   },
   "require-dev": {
-    "kappa/tester": "1.1.*"
+    "nette/tester": "~1.0"
   },
   "autoload": {
     "psr-0": {
