--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "issues": "https://github.com/Kappa-org/Utils/issues"
   },
   "require": {
+    "php": ">= 5.4.0",
     "nette/utils": "~2.2"
   },
   "require-dev": {
