--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     "nette/tester": "~1.0"
   },
   "autoload": {
-    "psr-0": {
-      "Kappa": "src/"
+    "psr-4": {
+      "Kappa\\Utils\\": "src/"
     },
     "classmap": [
-      "src/Kappa/Utils/exceptions.php"
+      "src/exceptions.php"
     ]
   }
 }
