--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "issues": "https://github.com/Kappa-org/Utils/issues"
   },
   "require": {
-    "php": ">= 5.4.0",
-    "nette/utils": "~2.2"
+    "php": ">= 5.4.0"
   },
   "require-dev": {
     "nette/tester": "~1.0"
@@ -25,9 +24,6 @@
   "autoload": {
     "psr-4": {
       "Kappa\\Utils\\": "src/"
-    },
-    "classmap": [
-      "src/exceptions.php"
-    ]
+    }
   }
 }
